app1-manifests/namespace.yaml
# app1-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app1
