app1-manifests/app1-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app1-virtualservice
  namespace: app1
spec:
  hosts:
    - "*"
  gateways:
    - app1-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: nginx
            port:
              number: 80
